--- a/spa/main.css
+++ b/spa/main.css
@@ -8,23 +8,39 @@ body {
 #menu {
     display: block;
     font-size: 10pt;
-    border: 1px solid #353839;
-    width: 900px;
     margin: auto;
     text-align: center;
 }
 
 #menu > li {
     display: inline;
+    padding: 5px;
 }
 
-#menu > li:not(:last-child):after {
-    content: ' |';
+#menu > li, a.btn {
+    border: 1px solid #808080;
+    box-shadow: 1px 1px 2px #808080;
+    border-radius: 5px;
+    background: linear-gradient(#e1e1e1, #c0c0c0);
+    cursor: pointer;
+}
+#menu > li:hover, a.btn:hover {
+    background: linear-gradient(#f1f1f1, #e1e1e1);
+}
+#menu > li:active, a.btn:active {
+    color: #c0c0c0;
+    background: linear-gradient(#ffffff, #f1f1f1);
 }
 
 #main {
     width: 1000px;
     margin: auto;
+}
+
+fieldset {
+    height: 50px;
+    display: inline;
+    border: none;
 }
 
 table {
@@ -44,6 +60,13 @@ td, th {
     border: 1px solid #808080;
 }
 
+td.loading {
+    width: 100%;
+    height: 200px;
+    font-size: 14pt;
+    text-align: center;
+}
+
 .negative {
     color: #E12C2C;
 }
@@ -54,4 +77,8 @@ td, th {
 
 .price {
     text-align: right;
+}
+
+.disabled {
+    display: none;
 }
