--- a/spa/templates/Transactions.jade
+++ b/spa/templates/Transactions.jade
@@ -1,27 +1,33 @@
-mixin transaction_row(row)
-    tr
-        td= row.date
-        td(title=row.name)= maxChars(row.name, 60)
-        td(title=row.title)= maxChars(row.title, 60)
-        td.price(
-            class=row.cost < 0 ? 'negative' : 'positive'
-          )= row.cost + " zł"
-        td(title=row.iban)= maxChars(row.iban.replace(/ /g, ''), 5)
-        
 h1 Przelewy
-table
-    thead: tr
-        th Data
-        th Nazwa
-        th Tytuł
-        th Kwota
-        th IBAN
-    tbody
-        each row in transactions
-            +transaction_row(row)
-    tfoot
-        tr
-            th SUMA
-            th(colspan=2)
-            th.price: strong= sum + " zł"
-            th
+form(name='transactions')
+    fieldset
+        legend Data
+        label Miesiac
+        input(type='radio', name='has_month' value='y', checked)
+        label Zakres
+        input(type='radio', name='has_month' value='n')
+        div#transaction-month
+            input(type='month', name='month')
+        div.disabled#transaction-range
+            label Od dnia
+            input(type='date', name='date_start', disabled) 
+            br
+            label Do dnia
+            input(type='date', name='date_end', disabled)
+    fieldset
+        legend mniejszy od
+        input(type='number', min='0', step='0.01', name='cost_le')
+    fieldset
+        legend większy od
+        input(type='number', min='0', step='0.01', name='cost_ge')
+    fieldset
+        legend Szukaj
+        input(type='search', name='text')
+    fieldset
+        legend Opcje
+        input(type='checkbox', name='negative' value='t')
+        span Ujemne?
+        input(type='checkbox', name='positive', value='t')
+        span Dodatnie?
+
+table#transactions
