--- a/spa/templates/Transactions.jade
+++ b/spa/templates/Transactions.jade
@@ -1,33 +1,45 @@
+mixin query_input
+    input&attributes(attributes)(onchange="view.getTransactions()")
+
+mixin text_query_input
+    input&attributes(attributes)(oninput="view.getTransactions()")
+
 h1 Przelewy
 form(name='transactions')
     fieldset
         legend Data
         label Miesiac
-        input(type='radio', name='has_month' value='y', checked)
+        input(type='radio', name='has_month' value='y', checked, onchange='view.changeDateRange(this)')
         label Zakres
-        input(type='radio', name='has_month' value='n')
+        input(type='radio', name='has_month' value='n', onchange='view.changeDateRange(this)')
         div#transaction-month
-            input(type='month', name='month')
+            +text_query_input(type='month', name='month')
+            br
         div.disabled#transaction-range
             label Od dnia
-            input(type='date', name='date_start', disabled) 
+            +text_query_input(type='date', name='date_start', disabled) 
             br
             label Do dnia
-            input(type='date', name='date_end', disabled)
+            +text_query_input(type='date', name='date_end', disabled)
     fieldset
-        legend mniejszy od
-        input(type='number', min='0', step='0.01', name='cost_le')
+        legend Mniejszy od
+        +text_query_input(type='number', min='0', step='0.01', name='cost_le')
     fieldset
-        legend większy od
-        input(type='number', min='0', step='0.01', name='cost_ge')
+        legend Większy od
+        +text_query_input(type='number', min='0', step='0.01', name='cost_ge')
     fieldset
         legend Szukaj
-        input(type='search', name='text')
+        +text_query_input(type='search', name='text')
     fieldset
         legend Opcje
-        input(type='checkbox', name='negative' value='t')
-        span Ujemne?
-        input(type='checkbox', name='positive', value='t')
-        span Dodatnie?
+        +query_input(type='checkbox', name='negative' value='t')
+        label Ujemne?
+        +query_input(type='checkbox', name='positive', value='t')
+        label Dodatnie?
+
+div.modal.disabled
+    form(name='select_type')
+        input(type='')
+
 
 table#transactions
