--- a/spa/templates/Transactions.jade
+++ b/spa/templates/Transactions.jade
@@ -37,9 +37,6 @@ form(name='transactions')
         +query_input(type='checkbox', name='positive', value='t')
         label Dodatnie?
 
-div.modal.disabled
-    form(name='select_type')
-        input(type='')
-
+div.modal.disabled#modal_add_type
 
 table#transactions
