show types on transaction sites

--- a/spa/templates/Transactions.jade
+++ b/spa/templates/Transactions.jade
@@ -37,6 +37,15 @@ form(name='transactions')
         +query_input(type='checkbox', name='positive', value='t')
         label Dodatnie?
 
+div.legend
+    strong Legenda: &nbsp;
+    span.badge.type_donation D
+    span &nbsp; Darowizna &nbsp;
+    span.badge.type_bill R
+    span &nbsp; Rachunek &nbsp;
+    span.badge.type_paid_month S
+    span &nbsp; Składka &nbsp;
+
 div.modal.disabled#modal_add_type
 
 table#transactions
