--- a/spa/main.css
+++ b/spa/main.css
@@ -23,6 +23,7 @@ body {
     border-radius: 5px;
     background: linear-gradient(#e1e1e1, #c0c0c0);
     cursor: pointer;
+    padding: 0 2px;
 }
 #menu > li:hover, a.btn:hover {
     background: linear-gradient(#f1f1f1, #e1e1e1);
@@ -60,6 +61,24 @@ td, th {
     border: 1px solid #808080;
 }
 
+.badge {
+    border-radius: 5px;
+    color: white;
+    padding: 0 2px;
+}
+
+.type_donation {
+    background: #339ACC;
+}
+
+.type_bill {
+    background: #D92121;
+}
+
+.type_paid_month {
+    background: #29AB87;
+}
+
 @keyframes spin { 100% {transform:rotate(360deg);} }
 
 td.loading {
@@ -88,6 +107,11 @@ td.loading img {
     display: none;
 }
 
+.right {
+    float: right;
+    text-align: right;
+}
+
 .modal {
     position: fixed;
     z-index: 1;
@@ -96,15 +120,14 @@ td.loading img {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
     background-color: white;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
 	border-radius: 10px;
-    width: 400px; 
+    width: 500px; 
 }
