--- a/spa/templates/TableTransactions.jade
+++ b/spa/templates/TableTransactions.jade
@@ -1,14 +1,20 @@
 mixin transaction_row(num, row)
     tr
-        td= row.date
+        th= row.date
         td(title=row.name)= maxChars(row.name, 60)
         td(title=row.title)= maxChars(row.title, 60)
         td.price(
             class=row.cost < 0 ? 'negative' : 'positive'
           )= row.cost + " zł"
-        td(title=row.iban)= maxChars(row.iban && row.iban.replace(/ /g, ''), 5)
+        //td(title=row.iban)= maxChars(row.iban && row.iban.replace(/ /g, ''), 5)
         td
-            a.btn(onclick='view.addNewTypeTransaction(#{num})') +
+            each donat in row.donations
+                span.badge.type_donation(title='#{donat.name}\n#{donat.cost} zł') D
+            each bill in row.bills
+                span.badge.type_bill(title='#{bill.name}\n#{bill.cost} zł') R
+            each paid in row.paidmonths
+                span.badge.type_paid_month(title='#{paid.name}\n#{paid.cost} zł') S
+            a.right.btn(onclick='view.addNewTypeTransaction(#{num})') +
 
 
 mixin foot_row(title, value)
@@ -16,15 +22,14 @@ mixin foot_row(title, value)
         th= title
         th(colspan=2)
         th.price: strong= value
-        th(colspan=2)
+        th
 
 thead: tr
-    th Data
-    th Nazwa
-    th Tytuł
-    th Kwota
-    th IBAN
-    th Typy 
+    th(width='8%') Data
+    th(width='38%') Nazwa
+    th(width='40%') Tytuł
+    th(width='5%') Kwota
+    th(width='5%') Typy 
 tbody
     each row, num in transactions
         +transaction_row(num, row)
