--- a/spa/templates/Transactions.jade
+++ b/spa/templates/Transactions.jade
@@ -45,6 +45,8 @@ div.legend
     span &nbsp; Rachunek &nbsp;
     span.badge.type_paid_month S
     span &nbsp; Składka &nbsp;
+    span.badge.type_other O
+    span &nbsp; Inne &nbsp;
 
 div.modal.disabled#modal_add_type
 
