--- a/spa/sass/main.scss
+++ b/spa/sass/main.scss
@@ -86,3 +86,20 @@ ul.data-list li:hover {
 .data-list .not-active {
     float: right;
 }
+
+div.login {
+    text-align: center;
+}
+
+.login label {
+    display: inline-block;
+    width: 140px;
+    text-align: right;
+    margin-right: 10px;
+}
+.login fieldset {
+    text-align: center;
+    display: block;
+    padding-bottom: 0px;
+    height: auto;
+}
