--- a/spa/css/main.css
+++ b/spa/css/main.css
@@ -28,6 +28,8 @@ table {
   border-radius: 5px;
   color: white;
   padding: 0 2px; }
+  td .badge {
+    float: left; }
   .badge.type_donation {
     background: #339ACC; }
   .badge.type_bill {
