--- a/cebulany/templates/report.html
+++ b/cebulany/templates/report.html
@@ -36,6 +36,7 @@ thead {
 }
 </style>
 <div id='main'>
+<img src="data:image/png;base64,{{ fig_total }}"\>
 {% for report in months %}
 <div class='month'>
 <table>
