--- a/cebulany/templates/report.html
+++ b/cebulany/templates/report.html
@@ -46,7 +46,7 @@ thead {
 <div id="plot-main" style="width:100%;height:300px;"></div>
 <script>
     plot('plot-main', {
-        legend: {x: 0, y: 1, bgcolor: '#f2f2f2'},
+        legend: {orientation: 'h'},
         margin: {l: 50, r: 0, b: 25, t: 25, pad: 4}
     }, [
         {
@@ -56,13 +56,34 @@ thead {
             y: {{ main_plot.acc | tojson | safe}},
             line: {color: '#76D7EA', width: 0},
             fill: 'tozeroy'
-        }, {
+        }, 
+        {
             name: 'Przychód / Strata',
             mode: 'scatter',
             x: {{ main_plot.dates | tojson | safe}},
             y: {{ main_plot.moneys | tojson | safe}},
             line: { color: '#1E90FF', width: 2}
-        }
+        },
+        {% for budget in main_plot.budgets -%}
+        {
+            name: '{{budget.name}} (budżet)',
+            mode: 'scatter',
+            visible: 'legendonly',
+            x: {{ main_plot.dates | tojson | safe}},
+            y: {{ budget.moneys | tojson | safe}},
+            line: { color: '{{budget.color}}', width: 2, dash: 'dash' }
+        },
+        {%- endfor -%}
+        {% for ptype in main_plot.payment_types -%}
+        {
+            name: '{{ptype.name}}',
+            mode: 'scatter',
+            visible: 'legendonly',
+            x: {{ main_plot.dates | tojson | safe}},
+            y: {{ ptype.moneys | tojson | safe}},
+            line: { color: '{{ptype.color}}', width: 2, dash: 'dashdot' }
+        },
+        {%- endfor %}
     ]);
 </script>
 {% for report in months %}
